# advent-of-code-2024-rust

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  justfile  shell.nix
nix/modules/: devshell.nix
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  main.rs
