[package]
name = "advent-of-code-2024-rust"
version = "0.1.0"
edition = "2021"
authors = ["@dacr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }