[package]
name = "advent-of-code-2024-rust"
version = "0.1.0"
edition = "2021"
authors = ["@dacr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.11.1"
im = { version = "15.1.0", features = ["proptest", "serde"] }
tailcall = {version = "1.0.1"}
